bitfields/tests/compile_error_cases/errors/array_fields/array_field_integer_backed_too_many_bits.rs
use bitfields::bitfield;

/// Array field bits exceed the integer-backed bitfield size.
#[bitfield(u16)]
pub struct Bitfield {
    a: [u8; 4],
}

fn main() {}

