bitfields/tests/compile_error_cases/errors/array_fields/array_field_integer_backed_too_many_bits.stderr
error: The total number of bits of the fields '32 bits' is greater than the number of bits of the bitfield 'u16 (16 bits)'.
 --> tests/compile_error_cases/errors/array_fields/array_field_integer_backed_too_many_bits.rs:4:12
  |
4 | #[bitfield(u16)]
  |            ^^^
